# PatchTST_FeatureSelector

./: README.md  config.yaml  featureselect.py  pyproject.toml
EXAMPLE/: TEST.py
HFdata/: AA_15m.csv  A_15m.csv  ERX_15m.csv  FAS_15m.csv  JNUG_15m.csv  NAIL_15m.csv  NUGT_15m.csv  SOXL_15m.csv  SPXL_15m.csv  TECL_15m.csv  TMF_15m.csv  TNA_15m.csv
src/patchtst_featureselect/: __init__.py  cli.py  core.py
